# algorithm_repository

./: .gitignore  Dockerfile  README.md  docker-compose.yml  error.txt  plane.md  pyproject.toml  scaffold_project.py  test_out.txt
.runtime/library_platform/: algorithm_library.db
alembic/: env.py
app/: __init__.py  config.py  main.py
app/algorithms/: __init__.py  _algo_template.py  base.py  registry.py
app/api/: __init__.py  deps.py
app/contracts/: __init__.py  algorithm.py
app/core/: __init__.py  celery_app.py  database.py  exceptions.py  logging.py  minio_client.py  package_cache.py  redis.py  security.py
app/engine/: __init__.py  dag.py  orchestrator.py  tasks.py
app/models/: __init__.py  algorithm.py  (+2 more)
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/routes/: algorithms.py
backend/app/schemas/: algorithm.py  flow_dsl.py
backend/app/services/: algorithm_registry.py  dsl_validator.py
backend/docs/20260305/: design.md  plan.md  总体方案.md
backend/docs/plans/: 2026-03-05-algorithm-platform-design-zh.md  2026-03-05-algorithm-platform-design.md  2026-03-05-algorithm-platform-implementation-plan-zh.md  2026-03-05-algorithm-platform-implementation-plan.md  2026-03-06-algorithm-platform-business-platform-alignment-meeting-zh.md
backend/tests/api/: test_algorithms_api.py
backend/tests/unit/: test_dsl_validator.py
docs/: algorithm-package-spec.md  algorithm-platform-function-analysis.md  algorithm_dispatch.md
services/: app.py  dependencies.py  main.py
tests/: test_repo_layout.py
tools/: publish_cli.py  validate_package.py
(+143 files in other folders)
